File: plugins/nexus-repository-raw/src/test/java/org/sonatype/nexus/content/raw/RawUploadHandlerTest.java